# Irctc_POC

./: README.md  pyproject.toml
app/: __init__.py  api.py  config.py  main.py
app/graph/: __init__.py  builder.py  nodes.py
app/llm/: __init__.py  model.py
app/prompts/: __init__.py
app/services/: __init__.py  irctc_service.py  llm_service.py
docs/: ARCHITECTURE.md
notebook/: docs_prompt.txt  gemini_chat.ipynb  gemini_convo_20260221T141011Z.json  pythonrrrr.ipynb
tests/: test_llm_service.py
