[project]
name = "yes"
version = "0.1.0"
description = "irctc"
authors = [
    {name = "Ashish"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "langgraph (>=1.0.9,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "langchain-groq (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
